[package]
name = 'pallet-route-executor'
version = '1.0.2'
description = 'A pallet to execute a route containing a sequence of trades'
authors = ['GalacticCouncil']
edition = '2021'
license = 'Apache 2.0'
repository = "https://github.com/galacticcouncil/warehouse/tree/master/route-executor"

[dependencies]
codec.workspace = true
scale-info.workspace = true
serde = { features = ["derive"], optional = true, version = "1.0.137" }

# HydraDX dependencies
hydradx-traits = { path = "../traits", default-features = false }

# ORML dependencies
orml-traits.workspace = true

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false, optional = true }
frame-support.workspace = true
frame-system.workspace = true
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false, optional = true }
sp-std.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-io.workspace = true
pretty_assertions = "1.2.1"
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
orml-tokens.workspace = true
pallet-currencies = { path = "../currencies", default-features = false }
hydradx-adapters = { path = "../adapters", default-features = false }
test-utils = { path = "../test-utils", default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
]
std = [
  'serde/std',
  'codec/std',
  'sp-std/std',
  'frame-support/std',
  'frame-system/std',
  'orml-tokens/std',
]
try-runtime = ["frame-support/try-runtime"]
