[package]
name = 'pallet-stableswap'
version = '1.0.1'
description = 'AMM for correlated assets'
authors = ['GalacticCouncil']
edition = '2021'
homepage = 'https://github.com/galacticcouncil/basilisk-node'
license = 'Apache 2.0'
repository = 'https://github.com/galacticcouncil/basilisk-node'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# parity
codec.workspace = true
scale-info.workspace = true

# primitives
sp-runtime.workspace = true
sp-std.workspace = true
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false}
sp-io.workspace = true

# FRAME
frame-support.workspace = true
frame-system.workspace = true

# Math
hydra-dx-math = { git = "https://github.com/galacticcouncil/HydraDX-math", rev="54fe636a19f283de9afbd5b5015a951b25e11a6b", default-features = false }

# HydraDX dependencies
hydradx-traits = { path = "../traits", default-features = false }

# ORML dependencies
orml-traits.workspace = true

# Optional imports for benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false , optional = true}

[dev-dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false}
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.29", default-features = false, features=["std"]}
proptest = "1.0.0"

[features]
default = ['std']
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "hydra-dx-math/runtime-benchmarks",
]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    "scale-info/std",
    "orml-tokens/std",
    "frame-benchmarking/std",
]
